--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,45 @@
-.App {
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 15px;
+  overflow: hidden;
+  position: relative;
+  width: 99%;
+  background-color: #478C5C;
+  float: right;
+}
+
+li {
+  float: left;
+  display: inline;
+  color: white;
+  font-size: 25px;
+}
+
+li a:hover {
+  background-color: #BACC81;
+}
+
+li a {
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+h1{  
   background-color: #CDD193;
   min-height: 100vh;
   margin: 0px;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 0px 10px;
+  margin-top: 0;
+  margin-bottom:0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-h1{
-  padding: 0px 24px;
-  margin-top: 0;
-  margin-bottom:0;
 }
 
 form.search {
@@ -22,6 +48,15 @@ form.search {
   gap: 6px;
   align-items: center;
   min-width: 200px; max-width: 100vw;
+}
+
+input[type=text] {
+  width: 10%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #478C5C;
+  box-sizing: border-box;
 }
 
 .submit {
