edited recipe of the week and added image

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+App {
+  background-color: #CDD193;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -27,9 +31,9 @@ li a {
   text-decoration: none;
 }
 
-h1{  
+header{  
+  /* min-height: 100vh; */
   background-color: #CDD193;
-  min-height: 100vh;
   margin: 0px;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -58,6 +62,18 @@ input[type=text] {
   border: 1px solid #478C5C;
   box-sizing: border-box;
 }
+
+.card {
+  color: black;
+  background: #BACC81;
+  height: 300px;
+  width: 300px;
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: space-evenly; */
+  padding: 10px; 
+  }
 
 .submit {
  padding: 1px;
