--- a/src/Login.css
+++ b/src/Login.css
@@ -5,4 +5,17 @@ input[type=text] {
     display: inline-block;
     border: 1px solid #478C5C;
     box-sizing: border-box;
-  }
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar {
+  mask-type: alpha;
+  text-decoration: none;
+  background-color: #BACC81;
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
