--- a/src/App.css
+++ b/src/App.css
@@ -103,3 +103,17 @@ input[type=text] {
  border-radius: 2px;
  
 }
+
+.recipe-grid {
+  margin-top: 30px;
+  align-items: center;
+  display: grid;
+  grid-template-columns: 240px 240px;
+  grid-column-gap: 30px;
+  align-items: baseline;
+}
+
+.health-labels {
+  padding: 3px 4px;
+  border-radius: 2px;
+}
