--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,14 @@ header{
   flex-wrap: wrap;
 }
 
+.form {
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+  align-items: center;
+  min-width: 200px; max-width: 100vw;
+}
+
 form.search {
   display: flex;
   justify-content: center;
