--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 App {
   background-color: #CDD193;  
 }
-
+div {
+  background-color: #CDD193;
+}
 
 ul {
   list-style-type: none;
@@ -97,6 +99,7 @@ form.search {
   background: #BACC81;
   height: 300px;
   width: 325px;
+  border: 1px solid black;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
