--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,6 +1,6 @@
 .saved-recipes-card {
     background-color: #BACC81;
-    border: 1px solid #ddd;
+    border: 1px solid black;
     border-radius: 5px;
     padding: 20px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
